--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,14 +18,15 @@ dependencies:
     sdk: flutter
   flutter_hooks: ^0.20.1
   flutter_screenutil: ^5.8.1
-  flutter_svg: ^2.0.7
-  fluttertoast: ^8.2.2
-  get_it: ^7.2.0
-  hooks_riverpod: ^2.4.0
-  json_annotation: ^4.8.1
-  retrofit: ^4.0.1
-  riverpod_annotation: ^2.3.4
-  shared_preferences: ^2.1.0
+  fluttertoast: ^8.2.6
+  get_it: ^7.7.0
+  hooks_riverpod: ^2.5.1
+  json_annotation: ^4.9.0
+  retrofit: ^4.1.0
+  riverpod_annotation: ^2.3.5
+  shared_preferences: ^2.2.3
+  mockito: ^5.4.4
+
 
 
 dev_dependencies:
